--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -5,6 +5,7 @@ body {
 .main {
     margin: auto;
     width: 60vw;
+    padding-bottom: 3.5rem;
 }
 
 .vertical-center {
